--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
         <service
-            android:name="com.example.viz.nextagram.SyncDataService"
+            android:name=".service.SyncDataService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.example.viz.nextagram.SyncDataService" />
@@ -22,7 +22,7 @@
 
         <provider
             android:authorities="com.example.viz.nextagram"
-            android:name=".NextagramProvider"
+            android:name=".provider.NextagramProvider"
             android:enabled="true"
             android:exported="true"
             android:grantUriPermissions="true"
@@ -30,7 +30,7 @@
             android:writePermission="com.example.viz.nextagram.WRITE" />
 
         <activity
-            android:name=".HomeView"
+            android:name=".view.HomeView"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
         </activity>
 
         <activity
-            android:name=".WritingArticleView"
+            android:name=".view.WritingArticleView"
             android:label="@string/title_activity_write">
             <intent-filter>
                 <action android:name=".WritingArticle" />
@@ -49,7 +49,7 @@
             </activity>
 
         <activity
-            android:name=".ArticleView"
+            android:name=".view.ArticleView"
             android:label="@string/title_activity_viewer">
             <intent-filter>
                 <action android:name=".ArticleView" />
